Fix scroll issue on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -76,7 +76,17 @@
   * {
     @apply border-border;
   }
+  html {
+    height: 100%;
+    overflow: hidden;
+    position: fixed;
+    width: 100%;
+  }
   body {
+    height: 100%;
+    overflow: hidden;
+    position: fixed;
+    width: 100%;
     @apply bg-background text-foreground;
   }
 }
